src/Pages/PagesStyles/Statistics.css
.statistics-page {
    gap: var(--l-padding);
    flex-wrap: wrap;
}

.bar-charts-container {
    flex-wrap: wrap;
}

.statistic-row {
    border-bottom: 1px solid var(--primary);
    width: 100%;
    padding-block: calc(var(--l-padding) * 2);
}

.bars-container {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

.bar-chart {
    width: 45%;
    height: 350px;
    min-width: 350px;
}

.sort-orders-statistics-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--primary);
    border-radius: 5px;
    outline: 1px solid var(--dark-cyan);
    font-weight: 500;
}

.sort-orders-statistics {
    white-space: nowrap;
    padding: var(--m-padding);
    cursor: pointer;
    transition: all 0.2s;
}

.sort-orders-statistics.active {
    color: white;
    background-color: var(--dark-cyan);
}

@media (hover:hover) {
    .sort-orders-statistics:hover {
        color: white;
        background-color: var(--dark-cyan);
    }
}

.statistics-page h2,
.statistics-page h3 {
    width: 100%;
}

/* AVERAGES PAGES */
.averages {
    padding: var(--m-padding);
    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.2);
    background-color: var(--bg);
    gap: var(--l-padding);
    padding-bottom: var(--l-padding);
    border-radius: 5px;
    border-bottom: none;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    position: relative;
}

.averages::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: calc(var(--l-padding) * -2);
    width: 100%;
    height: 1px;
    background-color: black;
}

.averages h1 {
    width: auto;
    color: var(--dark-cyan);
}

.averages p {
    color: var(--grey);
    width: auto;
    font-weight: 500;
}

.average-profit h1 {
    color: var(--profit-green);
}

/* DONUT CHARTS */
.donut-charts-wrapper {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

@media screen and (max-width: 1200px) {
    .averages {
        grid-template-columns: repeat(2, 1fr);
    }

    .donut-charts-wrapper {
        grid-template-columns: repeat(1, 1fr);
        place-items: center;
    }
}

@media screen and (max-width: 768px) {
    .bar-chart {
        width: 90%;
    }
}

@media screen and (max-width: 600px) {
    .averages {
        grid-template-columns: repeat(1, 1fr);
    }
}

